<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/prefs_title_formatting">

        <ListPreference
            android:key="number_decimals"
            android:title="@string/prefs_title_number_decimals"
            android:summary="@string/prefs_summary_number_decimals"
            android:defaultValue="@string/default_number_decimals"
            android:entries="@array/number_decimals"
            android:entryValues="@array/number_decimals"/>

        <ListPreference
            android:key="group_separator_v2"
            android:title="@string/prefs_title_group_separator"
            android:summary="@string/prefs_summary_group_separator"
            android:entries="@array/group_separator_value"
            android:entryValues="@array/group_separator_index"/>

        <ListPreference
            android:key="decimal_separator"
            android:title="@string/prefs_title_decimal_separator"
            android:summary="@string/prefs_summary_decimal_separator"
            android:defaultValue="@string/default_decimal_separator"
            android:entries="@array/decimal_separators"
            android:entryValues="@array/decimal_separators"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_title_visual">

<!--        <CheckBoxPreference-->
<!--            android:key="light_theme"-->
<!--            android:title="@string/prefs_title_light_theme"-->
<!--            android:defaultValue="false" />-->

        <ListPreference
            android:key="language"
            android:title="@string/prefs_title_language"
            android:summary="@string/prefs_summary_language"
            android:defaultValue="@string/language_code_default"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="other"
        android:title="@string/prefs_title_other">


        <Preference
            android:key="privacy_policy"
            android:title="@string/prefs_title_privacy_policy"
            android:summary="@string/prefs_summary_privacy_policy"/>

    </PreferenceCategory>

</PreferenceScreen>