<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/margin_view_typical"
    android:paddingBottom="@dimen/margin_view_small"
    android:paddingLeft="2dp"
    android:paddingEnd="2dp"
    android:stretchColumns="*">

    <TableRow>

        <TextView
            android:id="@+id/header_text_unit_from"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_view_typical"
            android:layout_marginRight="@dimen/margin_view_typical"
            android:textColor="@color/theme_white"
            tools:text="Canadian Dollar"/>

        <TextView
            android:id="@+id/header_text_unit_to"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_view_typical"
            android:textColor="@color/theme_white"
            android:layout_marginRight="@dimen/margin_view_typical"
            tools:text="Euro"/>

    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/header_value_from"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_view_small"
            android:layout_marginRight="@dimen/margin_view_small"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@color/theme_white"
            android:textColorHint="@color/theme_white"
            android:maxLength="@integer/num_digits_from"
            android:layout_gravity="bottom"
            android:scrollHorizontally="true"
            android:text="@string/default_value">

            <requestFocus/>

        </EditText>

        <!-- Use EditText instead of TextView to allow horizontal scrolling if answer is too long -->
        <EditText
            android:id="@+id/header_value_to"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_view_small"
            android:layout_marginRight="@dimen/margin_view_small"
            android:clickable="false"
            android:cursorVisible="false"
            android:textColor="@color/theme_white"
            android:textColorHint="@color/theme_white"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:inputType="none"
            android:scrollHorizontally="true"/>

    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/header_text_from"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_view_typical"
            android:layout_marginRight="@dimen/margin_view_typical"
            android:layout_marginTop="@dimen/margin_view_typical"
            android:textColor="@color/theme_white"
            android:text="@string/text_from"/>

        <TextView
            android:id="@+id/header_text_to"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_view_typical"
            android:layout_marginRight="@dimen/margin_view_typical"
            android:layout_marginTop="@dimen/margin_view_typical"
            android:textColor="@color/theme_white"
            android:text="@string/text_to"/>

    </TableRow>

</TableLayout>